--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -12,31 +12,18 @@
     </p>
     <a href="javascript:void()" class="js-sOPChange">@Model.StateOfPlace</a>
     <nav class="nav sOPActionLink js-sOPActionLink" id=@Model.Id>
-        @Html.ActionLink("Reserve",
-            "Create",
-            "Reservations",
+        @Html.ActionLink("Reserve", "Create", "Reservations",
             new { pPlaceId = Model.Id },
             new { @class = "nav-link js-reserve" })
 
-        @Html.ActionLink("Check In",
-            "CheckIn",
-            "Parking",
-            new
-            {  pPlaceId = Model.Id,
-               reservationId = Model.ReservationId },
+        @Html.ActionLink("Check In", "CheckIn", "Parking",
+            new {  pPlaceId = Model.Id, reservationId = Model.ReservationId },
             new { @class = "nav-link js-checkin" })
 
-        @Html.ActionLink("Upravit",
-            "Update",
-            "Reservations",
+        @Html.ActionLink("Upravit", "Update", "Reservations",
             new { resId = Model.ReservationId},
             new { @class = "nav-link js-upravit" })
 
-        @Html.ActionLink("Check Out",
-            "CheckOut",
-            "Parking",
-            new { pPlaceId = Model.Id,
-                reservationId = Model.ReservationId },
-            new { @class = "nav-link js-checkout" })
+        <a href="javascript:void()" class="nav-link js-checkout">Check Out</a>
     </nav>
 </div>
