--- a/HotelGarage/Views/Reservations/Form.cshtml
+++ b/HotelGarage/Views/Reservations/Form.cshtml
@@ -21,13 +21,14 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(r => r.Arrival, "Příjezd")
-        @Html.TextBoxFor(r => r.Arrival, (Model.StateOfReservationId == 2 ?
+        @Html.TextBoxFor(r => r.Arrival, (Model.StateOfReservationId == 2 ||
+            Model.StateOfReservationId == 5) ? // kontrola na rezervace ubytovane anebo vyjete pobytove
             (object)new { @class = "form-control", type = "datetime-local",
                 @Value = Model.Arrival.ToString("yyyy-MM-ddTHH:mm"),
                 @readonly = "readonly"
             } :
             (object)new { @class = "form-control", type = "datetime-local",
-                @Value = Model.Arrival.ToString("yyyy-MM-ddTHH:mm")}))
+                @Value = Model.Arrival.ToString("yyyy-MM-ddTHH:mm")})
         @Html.ValidationMessageFor(r => r.Arrival)
     </div>
     <div class="form-group">
@@ -67,9 +68,11 @@
         @Html.CheckBoxFor(c => c.Car.IsEmployee, new { @class = "form-control" })
         @Html.ValidationMessageFor(c => c.Car.IsEmployee)
     </div>
-    <button type="submit" class="btn btn-primary">Uložit</button>
+    <div class="row">
+        <input type="button" value="Zrušit" class="btn btn-outline-primary mx-3" onclick='location.href="@Url.Action("Parking", "Parking")"'>
+        <button type="submit" class="btn btn-primary">Uložit</button>
+    </div>
 }
-
 
 @section scripts
 {
