add css and script files to project and bundles, implements list view of all reservations with sorting datatable, add dto for this view, rename stateOfReservations through migration

--- a/HotelGarage/Content/Site.css
+++ b/HotelGarage/Content/Site.css
@@ -59,6 +59,10 @@ span.field-validation-error {
     padding: 0.5rem 0.3rem;
 }
 
+.nav-item {
+    margin-left: 10px;
+}
+
 .nav > li > a:hover, .navbar-brand:hover, #logoutForm > ul > li > a:hover {
     color: #f8f9fa;
 }
