--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                 <li class="nav-item">
                     @Html.ActionLink("Nová rezervace", "Create", "Reservations", null, new { @class = "nav-link " })
                 </li>
+                <li class="nav-item">
+                    @Html.ActionLink("Přehled Rezervací", "List", "Reservations", null, new { @class = "nav-link " })
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li>
