--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -174,13 +174,13 @@
                             <div>
                                 <div class="input-group justify-content-center">
                                     @Html.DropDownListFor(r => r.ParkingPlaceName,
-new SelectList(Model.FreeParkingPlaces),
-new
-{
-    @class = "custom-select disabled",
-    @id = "inputGroupSelect04",
-    value = reservation.ParkingPlaceId,
-    disabled = "disabled"
+                                        new SelectList(Model.FreeParkingPlaces),
+                                        new
+                                        {
+                                            @class = "custom-select disabled",
+                                            @id = "inputGroupSelect04",
+                                            value = reservation.ParkingPlaceId,
+                                            disabled = "disabled"
 })
                                     <div class="input-group-append">
                                         <button id="select-link" data-id='@reservation.Id'
@@ -192,18 +192,20 @@ new
                                 <div class="row justify-content-center">
                                     <div>
                                         @Html.ActionLink("Upravit",
-"Update",
-"Reservations",
-new { resId = reservation.Id },
-new { @class = "nav-link odkaz-prijezd" })
+                                            "Update",
+                                            "Reservations",
+                                            new { resId = reservation.Id },
+                                            new { @class = "nav-link odkaz-prijezd" })
                                     </div>
                                     <div class="nav-link">|</div>
                                     <div style="text-align:center">
                                         @Html.ActionLink("Smazat",
-"Delete",
-"Reservations",
-new { resId = reservation.Id },
-new { @class = "nav-link odkaz-prijezd" })
+                                            "Delete",
+                                            "Reservations",
+                                            new { resId = reservation.Id },
+                                            new { @class = "nav-link odkaz-prijezd js-delete", 
+                                                @onclick = "return confirm('Opravdu chcete rezervaci zrušit?')"
+                                            })
                                     </div>
                                 </div>
                             </div>
@@ -229,10 +231,10 @@ new { @class = "nav-link odkaz-prijezd" })
                             <div>
                                 <div class="input-group justify-content-center">
                                     @Html.DropDownListFor(r => r.ParkingPlaceName,
-         new SelectList(Model.FreeParkingPlaces),
-         new { @class = "custom-select", @id = "inputGroupSelect04",
-             value = reservation.ParkingPlaceId, value_id = i,
-             buttonType = "arriving" })
+                                         new SelectList(Model.FreeParkingPlaces),
+                                         new { @class = "custom-select", @id = "inputGroupSelect04",
+                                             value = reservation.ParkingPlaceId, value_id = i,
+                                             buttonType = "arriving" })
                                     <div class="input-group-append">
                                         <button id="select-link" data-id='@reservation.Id'
                                                 class="btn btn-warning select-link" type="submit" value-id='@i'
@@ -258,7 +260,8 @@ new { @class = "nav-link odkaz-prijezd" })
                                                  // kontrola zda nejde o docasne vyjetou rezervaci
                                                  (reservation.StateOfReservationId == 5) ?
                                                      new { @class = "nav-link odkaz-prijezd disabled", @onclick = "javascript:return false;" } :
-                                                     (object)new { @class = "nav-link odkaz-prijezd" })
+                                                     (object)new { @class = "nav-link odkaz-prijezd",
+                                                         @onclick = "return confirm('Opravdu chcete rezervaci zrušit?')" })
                                     </div>
                                     <div class="nav-link">|</div>
                                     <div style="text-align:center">
@@ -268,7 +271,8 @@ new { @class = "nav-link odkaz-prijezd" })
                                              new { pPlaceId = reservation.ParkingPlaceId,
                                                  reservationId = reservation.Id }, (reservation.ParkingPlaceName == "Nepřiřazeno") ?
                                                      new { @class = "nav-link odkaz-prijezd disabled", @onclick = "javascript:return false;" }
-                                                     : (object)new { @class = "nav-link odkaz-prijezd" })
+                                                     : (object)new { @class = "nav-link odkaz-prijezd",
+                                                         @onclick = "return confirm('Opravdu chcete rezervaci ubytovat?')" })
                                     </div>
                                 </div>
                             </div>
@@ -322,7 +326,10 @@ new { @class = "nav-link odkaz-prijezd" })
                                     </div>
                                     <div class="nav-link">|</div>
                                     <div style="text-align:center" id=@reservation.ParkingPlaceId>
-                                        <a href="javascript:void()" class="nav-link odkaz-prijezd js-checkout isregistered" isregistered=@reservation.IsRegistered.ToString()>Check Out</a>
+                                        <a href="javascript:void()" class="nav-link js-checkout odkaz-prijezd" 
+                                           isregistered="@reservation.IsRegistered.ToString()"
+                                           data-bbox-spz="@reservation.CarLicensePlate"
+                                           data-bbox-odjezd="@reservation.Departure">Check Out</a>
                                     </div>
                                 </div>
                             </div>
