--- a/HotelGarage/Content/Site.css
+++ b/HotelGarage/Content/Site.css
@@ -85,21 +85,28 @@ input[type="radio"], input[type="checkbox"]
 .card {
     margin-right: 10px;
     margin-bottom: 10px;
-    height: 180px;
+    height: 170px;
     width: 170px;
 }
 
 .card-title {
-    height: 30px;
-    color:black;
+    height: 35px;
+    color: black;
+    line-height: 20px;
 }
 
 .card-body {
     padding: 10px;
+    line-height: 15px;
+    margin-bottom: 5px;
 }
 
-.card-text{
-    font-size:0.9em;
+.card-body > p {
+    line-height: 18px;
+}
+
+.card-text {
+    font-size: 0.9em;
 }
 
 a.btn, p.btn {
@@ -116,7 +123,7 @@ a.btn, p.btn {
 .sOPActionLink > a {
     font-size: 14px;
     font-weight: bold;
-    padding: 6px 4px;
+    padding: 10px 4px;
 }
 
 .custom-select
@@ -150,5 +157,9 @@ div.col-auto > div > div.alert {
 
 .bootbox .modal-header {
     display: block;
+}
+
+a {
+    color: #007bff;
 }
 
