--- a/HotelGarage/Views/Reservations/List.cshtml
+++ b/HotelGarage/Views/Reservations/List.cshtml
@@ -5,10 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Seznam Rezervací</h2>
-<br/>
+<h4>Přehled Rezervací</h4>
 
-<table id="example" class="table table-striped table-bordered" style="width:100%">
+<table id="example" class="mdl-data-table" style="width:100%">
     <thead>
         <tr>
             <th>Jméno</th>
