--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -6,7 +6,7 @@
        data-bbox-pokoj="@Model.RoomNumberBootbox" data-bbox-jmeno="@Model.GuestNameBootbox"
        data-bbox-cena="@Model.PricePerNightBootbox" data-bbox-spz="@Model.LicensePlateBootbox" 
        data-bbox-typAuta="@Model.CarModelBootbox" data-bbox-zamestnanec="@Model.IsEmployeeBootbox"
-       data-bbox-jeRegistrovan="@Model.IsRegisteredBootbox">
+       data-bbox-jeRegistrovan="@Model.IsRegisteredBootbox" data-bbox-poznamka="@Model.NoteBootBox">
         @Model.PPlaceName<br>
         odj: @Model.Departure
     </p>
