--- a/HotelGarage/Views/Reservations/Form.cshtml
+++ b/HotelGarage/Views/Reservations/Form.cshtml
@@ -6,10 +6,10 @@
 <h4>@((Model.Id == 0) ? "Nová Rezervace" : "Upravit Rezervaci")</h4>
 @using (Html.BeginForm("Save", "Reservations"))
 {
-    @Html.AntiForgeryToken();
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(c => c.LicensePlate, "Státní Poznávací Značka")
-        @Html.TextBoxFor(c => c.LicensePlate, new { @class = "form-control SPZbox", autofocus = "autofocus", data_id = "spz-visible", placeholder = "Doplňte SPZ nebo jméno" })
+        @Html.TextBoxFor(c => c.LicensePlate, new { @class = "form-control SPZbox", autofocus = "autofocus", data_id = "spz-visible", placeholder = "Doplňte SPZ nebo jméno", maxlength = 20 })
         @Html.ValidationMessageFor(c => c.LicensePlate)
     </div>
     <div class="form-group">
@@ -38,29 +38,34 @@
     </div>
     <div class="form-group form-inline" id="isRegisteredDiv">
         @Html.LabelFor(r => r.IsRegistered, "Je Registrovaná?")
-            @Html.CheckBoxFor(r => r.IsRegistered, (Model.StateOfReservationId == 2?
-            (object)new { @class = "form-control" }: (object)new { @class = "form-control", @disabled = "disabled" }))
-            @Html.ValidationMessageFor(r => r.IsRegistered)
+        @Html.CheckBoxFor(r => r.IsRegistered, (Model.StateOfReservationId == 2?
+        (object)new { @class = "form-control" }: (object)new { @class = "form-control", @disabled = "disabled" }))
+        @Html.ValidationMessageFor(r => r.IsRegistered)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Car.CarModel, "Typ Auta")
-        @Html.TextBoxFor(c => c.Car.CarModel, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.Car.CarModel, new { @class = "form-control", maxlength = 50 })
         @Html.ValidationMessageFor(c => c.Car.CarModel)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Car.GuestsName, "Jméno Hosta")
-        @Html.TextBoxFor(c => c.Car.GuestsName, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.Car.GuestsName, new { @class = "form-control", maxlength = 50 })
         @Html.ValidationMessageFor(c => c.Car.GuestsName)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Car.GuestRoomNumber, "Číslo Pokoje Hosta")
-        @Html.TextBoxFor(c => c.Car.GuestRoomNumber, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.Car.GuestRoomNumber, new { @class = "form-control", maxlength = 3 })
         @Html.ValidationMessageFor(c => c.Car.GuestRoomNumber)
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Car.PricePerNight, "Cena za Noc v EUR")
-        @Html.TextBoxFor(c => c.Car.PricePerNight, new { @class = "form-control" })
+        @Html.TextBoxFor(c => c.Car.PricePerNight, new { @class = "form-control", maxlength = 3 })
         @Html.ValidationMessageFor(c => c.Car.PricePerNight)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(c => c.Car.Note, "Poznámka")
+        @Html.TextAreaFor(c => c.Car.Note, new { @class = "form-control", maxlength = 100, Rows = 5, style="resize:none;" })
+        @Html.ValidationMessageFor(c => c.Car.Note)
     </div>
     <div class="form-group form-inline">
         @Html.LabelFor(c => c.Car.IsEmployee, "Zaměstnanec?")
