--- a/HotelGarage/Content/Site.css
+++ b/HotelGarage/Content/Site.css
@@ -9,6 +9,10 @@
     padding-right: 15px;
 }
 
+a {
+    color: #007bff;
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -35,6 +39,7 @@ span.field-validation-error {
 .modal-title {
     margin-left : 20px;
 }
+
 /* bootstrap overrides */
 .navbar-inverse {
     background-color: #0069d9;
@@ -90,9 +95,10 @@ input[type="radio"], input[type="checkbox"]
 }
 
 .card-title {
-    height: 35px;
+    height: 30px;
     color: black;
     line-height: 20px;
+    font-size:18px;
 }
 
 .card-body {
@@ -107,12 +113,12 @@ input[type="radio"], input[type="checkbox"]
 
 .card-text {
     font-size: 0.9em;
+    margin-bottom: 5px; 
 }
 
 a.btn, p.btn {
     width: 148px;
     text-align: center;
-    border: none;
     padding: 0.2rem 0.75rem;
 }
 
@@ -159,6 +165,4 @@ div.col-auto > div > div.alert {
     display: block;
 }
 
-a {
-    color: #007bff;
-}
+
