--- a/HotelGarage/Content/site.less
+++ b/HotelGarage/Content/site.less
@@ -1,23 +1,24 @@
-﻿body {
+﻿/*general overrides*/
+
+body {
     font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin-top: 90px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
 a {
     color: #007bff;
+
+    .btn {
+        width: 148px;
+        text-align: center;
+        padding: 0.2rem 0.75rem;
+    }
 }
 
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
+p.btn {
+    width: 148px;
+    text-align: center;
+    padding: 0.2rem 0.75rem;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
@@ -27,31 +28,53 @@ textarea {
     max-width: 280px;
 }
 
-span.field-validation-error {
-    color: red;
-    font-weight: bold;
+/* Set padding to keep content from hitting the edges */
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
+input[type="radio"], input[type="checkbox"] {
+    margin-left: 5px;
+    zoom: 1.5;
+}
+
+label {
+    font-weight: normal;
+}
+
+/*custom classes*/
 .alert-prijezd {
-    width:180px;
+    width: 180px;
 }
 
-.modal-title {
-    margin-left : 20px;
+.odkaz-prijezd {
+    color: #533f03;
+    font-size: 20px;
+}
+
+.parkovaciMistoPrazdne {
+    width: 180px;
+}
+
+.sOPActionLink > a {
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px 4px;
 }
 
 /* bootstrap overrides */
 .navbar-inverse {
     background-color: #0069d9;
     border-color: #0069d9;
-}
 
-.navbar-inverse .navbar-nav > li > a {
-    color: #FFF;
-}
+    .navbar-nav > li > a {
+        color: #FFF;
+    }
 
-.navbar-inverse .navbar-brand {
-    color: #FFF;
+    .navbar-brand {
+        color: #FFF;
+    }
 }
 
 .navbar-brand {
@@ -72,19 +95,10 @@ span.field-validation-error {
     color: #f8f9fa;
 }
 
-label {
-    
-    font-weight: normal;
-}
-
 span.field-validation-error {
     font-size: 14px;
-}
-
-input[type="radio"], input[type="checkbox"]
-{
-    margin-left:5px;
-    zoom:1.5;
+    color: red;
+    font-weight: bold;
 }
 
 .card {
@@ -98,59 +112,42 @@ input[type="radio"], input[type="checkbox"]
     height: 30px;
     color: black;
     line-height: 20px;
-    font-size:18px;
+    font-size: 18px;
 }
 
 .card-body {
     padding: 10px;
     line-height: 15px;
     margin-bottom: 5px;
-}
 
-.card-body > p {
-    line-height: 18px;
+    p {
+        line-height: 18px;
+    }
 }
 
 .card-text {
     font-size: 0.9em;
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
 }
 
-a.btn, p.btn {
-    width: 148px;
-    text-align: center;
-    padding: 0.2rem 0.75rem;
+.dl-horizontal dt {
+    white-space: normal;
 }
 
-.parkovaciMistoPrazdne {
-    width: 180px;
-}
 
-.sOPActionLink > a {
-    font-size: 14px;
-    font-weight: bold;
-    padding: 10px 4px;
-}
 
-.custom-select
-{
-    margin-left : 5px;
+.custom-select {
+    margin-left: 5px;
+    border: 1px solid #212529;
+    color: #212529;
 }
 
 div.col-auto > div > div.alert {
     padding: 0.5rem 0.75rem;
 }
 
-.odkaz-prijezd {
-    color: #533f03;
-    font-size:20px;
-}
-.btn-outline-primary{
-    background-color:white;
-}
-.custom-select {
-    border: 1px solid #212529;
-    color: #212529;
+.btn-outline-primary {
+    background-color: white;
 }
 
 .input-group {
@@ -161,8 +158,10 @@ div.col-auto > div > div.alert {
     padding-right: 10px;
 }
 
+.modal-title {
+    margin-left: 20px;
+}
+
 .bootbox .modal-header {
     display: block;
 }
-
-
