--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav"> 
                 <li class="nav-item">
                     @Html.ActionLink("Nová rezervace", "Create", "Reservations", null, new { @class = "nav-link " })
                 </li>
@@ -41,8 +41,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/lib")
     @RenderSection("scripts", required: false)
     @Scripts.Render("~/Scripts/ParkingOverviewScript.js")
 </body>
