js app file refactoring

--- a/HotelGarage/Content/site.less
+++ b/HotelGarage/Content/site.less
@@ -57,7 +57,6 @@ label {
     padding: 10px 4px;
 }
 
-
 /* bootstrap overrides */
 .navbar-inverse {
     background-color: #0069d9;
@@ -155,13 +154,9 @@ div.col-auto > div > div.alert {
     display: block;
 }
 
-
-
-
-
-
-
-
+.bootbox-body {
+    margin: 20px 15px -15px 15px;
+}
 
 .modal-title {
     margin-left: 20px;
