--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
         <div class="card">
-             @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[19])
+            @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[19])
         </div>
         <div class="card">
             @Html.Partial("_ParkingPlace", Model.ParkingPlaceDtos[21])
@@ -199,7 +199,7 @@
                                             "Delete",
                                             "Reservations",
                                             new { resId = reservation.Id },
-                                            new { @class = "nav-link odkaz-prijezd js-delete", 
+                                            new { @class = "nav-link odkaz-prijezd js-delete",
                                                 @onclick = "return confirm('Opravdu chcete rezervaci zrušit?')"
                                             })
                                     </div>
@@ -335,3 +335,11 @@
         </div>
     </div>
 </div>
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            ParkingPlace.init();
+        });
+    </script>
+}
