--- a/HotelGarage/Views/Reservations/Form.cshtml
+++ b/HotelGarage/Views/Reservations/Form.cshtml
@@ -64,7 +64,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(c => c.Car.Note, "Poznámka")
-        @Html.TextAreaFor(c => c.Car.Note, new { @class = "form-control", maxlength = 100, Rows = 5, style="resize:none;" })
+        @Html.TextAreaFor(c => c.Car.Note, new { @class = "form-control", maxlength = 100, Rows = 5, style = "resize:none;" })
         @Html.ValidationMessageFor(c => c.Car.Note)
     </div>
     <div class="form-group form-inline">
@@ -81,7 +81,11 @@
 @section scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
-
+    <script>
+        $(document).ready(function () {
+            ReservationForm.init();
+        });
+    </script>
 }
 
 
