--- a/HotelGarage/Views/Reservations/List.cshtml
+++ b/HotelGarage/Views/Reservations/List.cshtml
@@ -90,4 +90,11 @@
         </tr>
     </tfoot>
 </table>
+@section scripts{
+    <script>
+        $(document).ready(function () {
+            ReservationList.init();
+        });
+    </script>
+}
 
