js app file refactoring

--- a/HotelGarage/Content/site.less
+++ b/HotelGarage/Content/site.less
@@ -155,9 +155,11 @@ div.col-auto > div > div.alert {
 }
 
 .bootbox-body {
-    margin: 20px 15px -15px 15px;
+    margin: 0px 15px -15px 15px;
 }
 
 .modal-title {
     margin-left: 20px;
+    margin-top: auto;
+    margin-bottom: -5px;
 }
