implement overview of free parking places for the next few days

--- a/HotelGarage/Content/site.less
+++ b/HotelGarage/Content/site.less
@@ -57,6 +57,10 @@ label {
     padding: 10px 4px;
 }
 
+.freeParkingPlaces{
+    width: 60px;
+    text-align:center;  
+}
 /* bootstrap overrides */
 .navbar-inverse {
     background-color: #0069d9;
