--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -154,6 +154,45 @@
             </div>
         </div>
         <div class="col-auto">
+            <h4>Počet volných míst</h4>
+            <div>
+                <div class="row alert alert-info">
+                    <div style="margin:auto;">
+                        <div class="row">
+                            <div class="freeParkingPlaces">
+                                @DateTime.Today.AddDays(0).ToString("dd.MM.")<br />
+                                @Model.NumberOfFreeParkingPlacesArray[0]
+                            </div>
+                            <div class="freeParkingPlaces">
+
+                                @DateTime.Today.AddDays(1).ToString("dd.MM.")<br />
+                                @Model.NumberOfFreeParkingPlacesArray[1]
+                            </div>
+                            <div class="freeParkingPlaces">
+                                @DateTime.Today.AddDays(2).ToString("dd.MM.")<br />
+                                @Model.NumberOfFreeParkingPlacesArray[2]
+                            </div>
+                            <div class="freeParkingPlaces">
+                                @DateTime.Today.AddDays(3).ToString("dd.MM.")<br />
+                                @Model.NumberOfFreeParkingPlacesArray[3]
+                            </div>
+                            <div class="freeParkingPlaces">
+                                @DateTime.Today.AddDays(4).ToString("dd.MM.")<br />
+                                @Model.NumberOfFreeParkingPlacesArray[4]
+                            </div>
+                            <div class="freeParkingPlaces">
+                                @DateTime.Today.AddDays(5).ToString("dd.MM.")<br />
+                                @Model.NumberOfFreeParkingPlacesArray[5]
+                            </div>
+                            <div class="freeParkingPlaces">
+                                @DateTime.Today.AddDays(6).ToString("dd.MM.")<br />
+                                @Model.NumberOfFreeParkingPlacesArray[6]
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <br />
             @if (Model.NoShowReservations.Count != 0)
             {
                 <h4>No Show rezervace</h4>
