new struct to pass occupancy data into view, repository method changed to return also number of parking employees, corrected bug when name of the car driver was not shown correctly,

--- a/HotelGarage/Views/Parking/_ParkingPlace.cshtml
+++ b/HotelGarage/Views/Parking/_ParkingPlace.cshtml
@@ -8,7 +8,7 @@
        data-bbox-typAuta="@Model.CarModelBootbox" data-bbox-zamestnanec="@Model.IsEmployeeBootbox"
        data-bbox-jeRegistrovan="@Model.IsRegisteredBootbox" data-bbox-poznamka="@Model.NoteBootBox">
         @Model.PPlaceName<br>
-        @((Model.GuestNameBootbox.Length > 15) ? Model.GuestNameBootbox.Substring(0, 15) : "")<br>
+        @((Model.GuestNameBootbox.Length > 15) ? Model.GuestNameBootbox.Substring(0, 15) : Model.GuestNameBootbox)<br>
         Odj: @Model.Departure
     </p>
     <a href="javascript:void()" class="js-sOPChange">@Model.StateOfPlace</a>
