--- a/HotelGarage/Views/Parking/Parking.cshtml
+++ b/HotelGarage/Views/Parking/Parking.cshtml
@@ -154,43 +154,54 @@
             </div>
         </div>
         <div class="col-auto">
-            <h4>Počet volných míst</h4>
+            <h4>Počet volných míst na následujících 7 dnů</h4>
             <div>
                 <div class="row alert alert-info">
                     <div style="margin:auto;">
                         <div class="row">
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(0).ToString("dd.MM.")<br />
-                                @Model.NumberOfFreeParkingPlacesArray[0]
+                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[0].NumberOfFreePlaces
+                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[0].NumberOfPlacesOccupiedByEmployees)
                             </div>
                             <div class="freeParkingPlaces">
 
                                 @DateTime.Today.AddDays(1).ToString("dd.MM.")<br />
-                                @Model.NumberOfFreeParkingPlacesArray[1]
+                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[1].NumberOfFreePlaces
+                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[1].NumberOfPlacesOccupiedByEmployees)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(2).ToString("dd.MM.")<br />
-                                @Model.NumberOfFreeParkingPlacesArray[2]
+                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[2].NumberOfFreePlaces
+                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[2].NumberOfPlacesOccupiedByEmployees)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(3).ToString("dd.MM.")<br />
-                                @Model.NumberOfFreeParkingPlacesArray[3]
+                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[3].NumberOfFreePlaces
+                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[3].NumberOfPlacesOccupiedByEmployees)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(4).ToString("dd.MM.")<br />
-                                @Model.NumberOfFreeParkingPlacesArray[4]
+                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[4].NumberOfFreePlaces
+                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[4].NumberOfPlacesOccupiedByEmployees)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(5).ToString("dd.MM.")<br />
-                                @Model.NumberOfFreeParkingPlacesArray[5]
+                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[5].NumberOfFreePlaces
+                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[5].NumberOfPlacesOccupiedByEmployees)
                             </div>
                             <div class="freeParkingPlaces">
                                 @DateTime.Today.AddDays(6).ToString("dd.MM.")<br />
-                                @Model.NumberOfFreeParkingPlacesArray[6]
+                                @Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[6].NumberOfFreePlaces
+                                (@Model.NumberOfFreeAndEmployeeOccupiedParkingPlacesArray[6].NumberOfPlacesOccupiedByEmployees)
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="text-center">
+                *místa pro staff se vůbec nepočítají do přehledu<br>
+                * v závorce je počet míst obsazených zaměstnanci<br>
             </div>
             <br />
             @if (Model.NoShowReservations.Count != 0)
